Added registering view and a separate add curriculum view. App now shows user name when logged in.
